# algo3-tp2

./: .gitignore  CMakeLists.txt  README.md
1/: main.cpp
2/: main.cpp
3/: main.cpp
4/: main.cpp
instancias/2/: 1_3_componente.in  2_5_componente.in  3_3_componente.in  4_1_componente.in  5_8_componente.in
instancias/3/: test1-in.txt
